terraform/backend-service.tf
resource "aws_ecs_service" "backend_service" {
  name            = "backend-service-v2"
  cluster         = aws_ecs_cluster.my_cluster.id
  task_definition = aws_ecs_task_definition.backend.arn
  desired_count   = 1
  launch_type     = "FARGATE"

  network_configuration {
    assign_public_ip = false
    subnets          = [aws_subnet.ecs_private_subnet.id]
    security_groups  = [aws_security_group.backend_security_group.id]
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.backend_tg.arn
    container_name   = "backend"
    container_port   = 8080
  }

  depends_on = [
    aws_ecs_cluster.my_cluster,
    aws_ecs_task_definition.backend
  ]
}
