terraform/load-balancer.tf
# Application Load Balancer for Frontend
resource "aws_lb" "frontend_alb" {
  name               = "frontend-alb"
  internal           = false
  load_balancer_type = "application"

  security_groups = [aws_security_group.frontend_security_group.id]
  subnets = [
    aws_subnet.ecs_subnet.id,
    aws_subnet.ecs_subnet2.id
  ]

  enable_deletion_protection = false

  tags = {
    Name = "frontendALB"
  }
}

# Target Group for Frontend ECS Service
resource "aws_lb_target_group" "frontend_tg" {
  name        = "frontend-tg"
  port        = 3000
  protocol    = "HTTP"
  vpc_id      = aws_vpc.main.id
  target_type = "ip"

  health_check {
    path                = "/"
    protocol            = "HTTP"
    port                = "traffic-port"
    healthy_threshold   = 2
    unhealthy_threshold = 2
    timeout             = 5
    interval            = 30
    matcher             = "200"
  }

  tags = {
    Name = "frontendTG"
  }
}

# Listener for HTTP Traffic
resource "aws_lb_listener" "frontend_listener" {
  load_balancer_arn = aws_lb.frontend_alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.frontend_tg.arn
  }
}
# Internal Load Balancer for Backend
resource "aws_lb" "backend_alb" {
  name               = "backend-alb"
  internal           = true
  load_balancer_type = "application"

  security_groups = [aws_security_group.backend_security_group.id]

  subnets = [
    aws_subnet.ecs_subnet.id,
    aws_subnet.ecs_subnet2.id
  ]

  enable_deletion_protection = false

  tags = {
    Name = "backendALB"
  }
}

# Target Group for Backend ECS Service
resource "aws_lb_target_group" "backend_tg" {
  name        = "backend-tg"
  port        = 8080
  protocol    = "HTTP"
  vpc_id      = aws_vpc.main.id
  target_type = "ip"

  health_check {
    path                = "/"
    protocol            = "HTTP"
    port                = "traffic-port"
    healthy_threshold   = 2
    unhealthy_threshold = 2
    timeout             = 5
    interval            = 30
    matcher             = "200"
  }

  tags = {
    Name = "backendTG"
  }
}

# Listener for Backend
resource "aws_lb_listener" "backend_listener" {
  load_balancer_arn = aws_lb.backend_alb.arn
  port              = 8080
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.backend_tg.arn
  }
}
